feat: Implement OTP-based login system with email verification
- Added `authcodes` app for handling OTP login codes.
- Created models for storing OTP codes with expiration and usage status.
- Implemented serializers for request and verification of OTP codes.
- Developed views for requesting and verifying OTP codes, including throttling.
- Integrated Celery tasks for sending OTP codes via email.
- Added necessary migrations for the new models.
- Updated requirements to include `django-allauth`, `dj-rest-auth`, and `drf-spectacular`.
- Created management commands for Google SocialApp setup and user permission management.
- Enhanced user management with custom admin views and serializers.

--- a/requirements.in
+++ b/requirements.in
@@ -8,3 +8,8 @@ djangorestframework-simplejwt
 celery[redis]
 channels
 django-redis
+django-allauth
+dj-rest-auth
+drf-spectacular
+sentry-sdk
+cryptography
