--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ click==8.3.0
 click-didyoumean==0.3.1
 click-plugins==1.1.1.2
 click-repl==0.3.0
+cloudinary==1.44.1
 colorama==0.4.6
 cryptography==46.0.3
 cyclonedx-python-lib==9.1.0
@@ -22,6 +23,7 @@ defusedxml==0.7.1
 dj-rest-auth==7.0.1
 Django==5.2.7
 django-allauth==65.13.0
+django-cloudinary-storage==0.3.0
 django-cors-headers==4.9.0
 django-environ==0.12.0
 django-filter==25.2
